switch database/sql to pgx driver
