# docs/swagger.yaml
@@ -1,11 +1,10 @@
-basePath: /api/
 definitions:
   db.Contact:
     properties:
       contact_id:
         type: integer
       created_at:
-        type: string
+        $ref: '#/definitions/pgtype.Timestamp'
       first_name:
         type: string
       last_name:
@@ -15,7 +14,27 @@ definitions:
       street:
         type: string
       updated_at:
+        $ref: '#/definitions/pgtype.Timestamp'
+    type: object
+  pgtype.InfinityModifier:
+    enum:
+    - 1
+    - 0
+    - -1
+    type: integer
+    x-enum-varnames:
+    - Infinity
+    - Finite
+    - NegativeInfinity
+  pgtype.Timestamp:
+    properties:
+      infinityModifier:
+        $ref: '#/definitions/pgtype.InfinityModifier'
+      time:
+        description: Time zone will be ignored when encoding to PostgreSQL.
         type: string
+      valid:
+        type: boolean
     type: object
   schemas.CreateContact:
     properties:
@@ -33,25 +52,41 @@ definitions:
     - phone_number
     - street
     type: object
-host: localhost:8000
+  schemas.UpdateContact:
+    properties:
+      first_name:
+        type: string
+      last_name:
+        type: string
+      phone_number:
+        type: string
+      street:
+        type: string
+    type: object
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  contact: {}
+  title: Go Gin Test Api
   version: "1.0"
 paths:
   /contacts:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Contact'
+            type: array
+      summary: Get all contacts
+      tags:
+      - contacts
     post:
       consumes:
       - application/json
-      description: add by json contact
       parameters:
       - description: Create contact
         in: body
@@ -69,41 +104,66 @@ paths:
       summary: Create new contact
       tags:
       - contacts
-securityDefinitions:
-  ApiKeyAuth:
-    description: Description for what is this security definition being used
-    in: header
-    name: Authorization
-    type: apiKey
-  BasicAuth:
-    type: basic
-  OAuth2AccessCode:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: accessCode
-    scopes:
-      admin: ""
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Application:
-    flow: application
-    scopes:
-      admin: Grants read and write access to administrative information
-      write: Grants write access
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Implicit:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: implicit
-    scopes:
-      admin: Grants read and write access to administrative information
-      write: Grants write access
-    type: oauth2
-  OAuth2Password:
-    flow: password
-    scopes:
-      admin: Grants read and write access to administrative information
-      read: Grants read access
-      write: Grants write access
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
+  /contacts/{contactId}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Contact Id
+        in: path
+        name: contactId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+      summary: Delete contact by id
+      tags:
+      - contacts
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Contact Id
+        in: path
+        name: contactId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Contact'
+      summary: Get contact by id
+      tags:
+      - contacts
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Contact Id
+        in: path
+        name: contactId
+        required: true
+        type: integer
+      - description: Update contact
+        in: body
+        name: contact
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.UpdateContact'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Contact'
+      summary: Update contact
+      tags:
+      - contacts
 swagger: "2.0"
